# simple_kubernetes

./: .gitignore  1.yml  Cargo.toml  README.md  build.rs  manager.yml  worker.yml
proto/: manager.proto  resources.proto  task.proto  worker.proto
src/: constants.rs  definition.rs  definition_test.rs  lib.rs  list_watcher.rs  main.rs  manager.rs  manager_proto.rs  manager_test.rs  node.rs  resources_proto.rs  scheduler.rs  simple_scheduler.rs  task.rs  task_proto.rs  work_queue.rs  worker.rs  worker_proto.rs  worker_test.rs
