[package]
name = "simple_kubernetes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
uuid = { version = "1.2.2", features = ["v4"] }
docker-api = { version = "0.12", default-features = false }