[package]
name = "simple_kubernetes"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
docker-api = { version = "0.12", default-features = false }
clap = { version = "4.0.29", features = ["derive"]}
serde = { version = "1.0.148", features = ["derive"] }
tokio = { version = "1.22.0", features = ["fs", "rt-multi-thread", "macros"] }
anyhow = "1.0.66"
serde_yaml = { version = "0.9.14" }
async-trait = "0.1.59"
tracing = "0.1.37"
thiserror = "1.0.37"
futures-util = "0.3.25"
tonic = "0.8.3"
prost = "0.11.3"
sysinfo = "0.26.8"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
etcd-rs = "1.0.0"
tracing-futures = "0.2.5"
serde_json = "1.0.89"

[dev-dependencies]
tempfile = "3.3.0"

[build-dependencies]
tonic-build = "0.8.4"
